--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,11 @@ code {
 .p-login {
   margin-top: 50px;
 }
+
+.log-err {
+  font-size: 25px;
+  background-color: #dc3545;
+  color: #fff;
+  border-radius: 10px;
+  margin: 15px 200px 0 200px;
+}
