--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ code {
 
 .p-login {
   margin-top: 50px;
+  font-size: 35px;
 }
 
 .log-err {
@@ -74,4 +75,8 @@ code {
 
 .cancel {
   margin-left: 5px;
+}
+
+.btn-login-form {
+  width: 100%;
 }
